@@ -271,6 +271,7 @@
 <div id="wrap-container"><p id="wrap"></p></div>
 
 <!-- Positioning methods bench -->
+<div id="body_relative" style="position: relative;"></div>
 <div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
   <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px"> </div>
   <div id="absolute_relative" style="position: relative; top: 10px; left:10px">
